# Luna

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  minio_init.sh  pyproject.toml  requirements.txt
frontend/: Dockerfile  Dockerfile.dev  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/api/: auth.ts  chat.ts  client.ts  comments.ts  posts.ts  profile.ts  search.ts
frontend/src/hooks/: useMe.ts  usePresence.ts
frontend/src/pages/: ChatsPage.tsx  ConfirmEmailPage.tsx  ConfirmEmailPendingPage.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  Rootredirect.tsx  SearchPage.tsx  SetupProfilePage.tsx
frontend/src/store/: authStore.ts  meStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: presenceUtils.ts
nginx/: nginx.conf  nginx.dev.conf  nginx.prod.conf
src/: alembic.ini  dependencies.py  main.py  settings.py
src/api/auth/: decorators.py  router.py
src/api/chat/: router.py  schemas.py
src/api/posts/: decorators.py  router.py  schemas.py
src/api/presense/: router.py
src/api/profile/: decorators.py  router.py  schemas.py
src/api/users/: decorators.py  router.py  schemas.py
src/core/auth/: entities.py  services.py  tasks.py
src/core/chat/: entities.py  enums.py  exceptions.py  services.py
src/core/posts/: entities.py  exceptions.py  services.py
src/core/profile/: enums.py  (+2 more)
src/migrations/: env.py
src/tests/: conftest.py
(+62 files in other folders)
